- Japanese character docs from Repzilon
- Added rumble support (Shindou Edition)
- Saved 70 cycles in IRQ when rumble is enabled
- Fix MAPDEC to account for "unused byte" actually being part of the address/value
- Assembler manual rewritten and moved to its own repo
- Removed old-style MSU-1 code in preparation for the new driver from Star Fox CD
- Added release builder script

Version 2.1
- Added option to change RNG behavior: either reset RNG at map screen (vanilla) or set RNG at boot and never reset (from Kando)
- new SYMBOLS.TXT generated using ARGSFX .map output and a custom tool
- SD2SNES uploading added
- Super FX fast multiply mode enabled
- Optimized MSU-1 code to fix flicker on SD2SNES
- fixed high poly arwing zoom in animation scale
- replaced MERGE.EXE with cgx2fx/fx2cgx by SegaRetro
- redone high poly arwing shapes
- Merged PR #37; Shield meter now changes color when you have a shield power-up with shieldboostcolorbox off
- Fix CGRAM line 2 fix oversight
- FastROM is now disabled by default

Version 2.0_01
- Hotfix: ENGLISH.INC and LANGUAGE.INC had unix line endings, causing assembler errors

Version 2.0
- All GFX and palettes crunched, all FXGFX interleaved when built
- Added player lives equate
- Hi-poly arwing replaces the low poly ship everywhere when hi-poly arwing enabled
- Added fontconv/foxfont by Phonymike
- Added option to disable SCRAMBLE sequence
- Added option to disable MARIO chip instruction cache
- Replaced PACKER with sf_crunch when packing palettes, sf_crunch has a higher compression ratio
- MOJI_0 and MOJI_D now built by the makefile using foxfont
- Fileslog removed
- Replaced SASM in palette building process with INCCOL custom tool, saves some time when building
- Move all palette fades to their own .COL files
- Added 30FPS unlock option
- SNES mouse BIOS not assembled unless mouse is enabled
- Added analog controls via SNES mouse (by Kando)
- Added assembler and MAKE.EXE documentation